# narrative-observer

./: .gitignore  2026-04-26_1007.html  2026-04-26_231423.html  2026-04-27_233540.html  2026-04-28_233551.html  2026-04-29_233738.html  2026-04-30_233614.html  2026-05-01_233645.html  2026-05-02_231954.html  2026-05-03_231943.html  2026-05-04_233718.html  README.md  REVIEW.md  feed.xml  index.html  pyproject.toml
.github/workflows/: run.yml  tests.yml
src/observer/: cli.py  config.py
src/observer/render/: feed.py  html.py
src/observer/sources/: krx.py  naver.py  ptt.py  reddit.py  xai.py
src/observer/synth/: merge.py
templates/: _base.html.j2  index.html.j2  report.html.j2
tests/: test_merge.py  test_render.py
tests/fixtures/grok_output/: braces_in_string.json  clean.json  fenced_bare.txt  fenced_json.txt  invalid_enums.json  prose_suffix.txt  string_evidence.json
